--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -1,7 +1,25 @@
-$primary: #5CDD8B;
-$danger: #DC3545;
+$primary: #5cdd8b;
+$danger: #dc3545;
 $link-color: #111;
-$border-radius: 50rem;
+$border-radius: .25rem;
 
 $highlight: #7ce8a4;
 $highlight-white: #e7faec;
+
+:root {
+    --page-background: #fafafa;
+    --background-secondary: #d0d3d5;
+    --background-4: #d0d3d5;
+    --background-ternary: #d0d3d5;
+    --main-font-color: #212529;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --page-background: #0a0a0a;
+        --background-secondary: #656565;
+        --background-4: #313131;
+        --background-ternary: #a7a7a7;
+        --main-font-color: #e4e4e4;
+    }
+}
