--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -7,6 +7,8 @@ $highlight: #7ce8a4;
 $highlight-white: #e7faec;
 
 :root {
+    color-scheme: light dark;
+    // 
     --page-background: #fafafa;
     --background-secondary: #d0d3d5;
     --background-4: #d0d3d5;
