🎨 improved ternary color in lightmode

--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -12,7 +12,7 @@ $highlight-white: #e7faec;
     --page-background: #fafafa;
     --background-secondary: #d0d3d5;
     --background-4: #d0d3d5;
-    --background-ternary: #d0d3d5;
+    --background-ternary: #8e8e8e;
     --main-font-color: #212529;
 }
 
