--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -13,6 +13,8 @@ $highlight-white: #e7faec;
     --background-secondary: #d0d3d5;
     --background-4: #d0d3d5;
     --background-ternary: #8e8e8e;
+    --background-sidebar-active: #e4e4e4;
+    --background-navbar: #8e8e8e;
     --main-font-color: #212529;
 }
 
@@ -22,6 +24,8 @@ $highlight-white: #e7faec;
         --background-secondary: #656565;
         --background-4: #313131;
         --background-ternary: #a7a7a7;
+        --background-sidebar-active: #777777;
+        --background-navbar: #333333;
         --main-font-color: #e4e4e4;
     }
 }
