fix: navbar background color

--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -15,7 +15,7 @@ $highlight-white: #e7faec;
     --background-4: #d0d3d5;
     --background-ternary: #8e8e8e;
     --background-sidebar-active: #e4e4e4;
-    --background-navbar: #8e8e8e;
+    --background-navbar: #FFF;
     --main-font-color: #212529;
 }
 
