--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -7,15 +7,8 @@ $border-radius: 50rem;
 $highlight: #7ce8a4;
 $highlight-white: #e7faec;
 
-
 $dark-font-color: #b1b8c0;
-
-.dark {
-    --page-background: #0a0a0a;
-    --background-secondary: #656565;
-    --background-4: #070A10;
-    --background-ternary: #a7a7a7;
-    --background-sidebar-active: #777777;
-    --background-navbar: #333333;
-    --main-font-color: $dark-font-color;
-}
+$dark-font-color2: #020b05;
+$dark-bg: #0D1117;
+$dark-bg2: #070A10;
+$dark-border-color: #1d2634;
