--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -6,3 +6,9 @@ $border-radius: 50rem;
 
 $highlight: #7ce8a4;
 $highlight-white: #e7faec;
+
+$dark-font-color: #b1b8c0;
+$dark-font-color2: #020b05;
+$dark-bg: #0D1117;
+$dark-bg2: #070A10;
+$dark-border-color: #1d2634;
