improve alignment and font size

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -5,6 +5,15 @@
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
 }
 
+h1 {
+    font-size: 31px;
+    height: 38px;
+}
+
+h2 {
+    font-size: 26px;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
