remove red circle around the btn-close while focus

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -132,8 +132,12 @@ h2 {
     }
 
     .btn-close {
-        opacity: 1;
+        box-shadow: none;
         filter: invert(1);
+
+        &:hover {
+            opacity: 0.6;
+        }
     }
 
     .modal-header {
