--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -12,3 +12,7 @@ $dark-font-color2: #020b05;
 $dark-bg: #0D1117;
 $dark-bg2: #070A10;
 $dark-border-color: #1d2634;
+
+$easing-in: cubic-bezier(0.54,0.78,0.55,0.97);
+$easing-out: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+$easing-in-out: cubic-bezier(0.79, 0.14, 0.15, 0.86);
