run stylelint for the project

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -2,7 +2,7 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 
 #app {
-    font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,segoe ui,Roboto,helvetica neue,Arial,noto sans,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol,noto color emoji;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, noto sans, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol, noto color emoji;
 }
 
 h1 {
@@ -18,7 +18,7 @@ h2 {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #CCC;
+    background: #ccc;
     border-radius: 20px;
 }
 
@@ -28,7 +28,7 @@ h2 {
 
 .modal-content {
     border-radius: 1rem;
-    box-shadow: 0 15px 70px rgba(0, 0, 0, .1);
+    box-shadow: 0 15px 70px rgba(0, 0, 0, 0.1);
 
     .dark & {
         box-shadow: 0 15px 70px rgb(0 0 0);
@@ -41,10 +41,9 @@ h2 {
     text-align: center;
 }
 
-
 .shadow-box {
     //overflow: hidden;   // Forget why add this, but multiple select hide by this
-    box-shadow: 0 15px 70px rgba(0, 0, 0, .1);
+    box-shadow: 0 15px 70px rgba(0, 0, 0, 0.1);
     padding: 10px;
     border-radius: 10px;
 
@@ -81,7 +80,6 @@ h2 {
 }
 
 @media (max-width: 550px) {
-
     .table-shadow-box {
         padding: 10px !important;
 
@@ -89,7 +87,7 @@ h2 {
             display: none;
         }
 
-        tbody  {
+        tbody {
             .shadow-box {
                 background-color: white;
             }
@@ -126,12 +124,11 @@ h2 {
             }
         }
     }
-
 }
 
 // Dark Theme override here
 .dark {
-    background-color: #090C10;
+    background-color: #090c10;
     color: $dark-font-color;
 
     &::-webkit-scrollbar-thumb {
@@ -173,7 +170,7 @@ h2 {
     }
 
     .table-hover > tbody > tr:hover {
-        --bs-table-accent-bg: #070A10;
+        --bs-table-accent-bg: #070a10;
         color: $dark-font-color;
     }
 
@@ -263,11 +260,13 @@ h2 {
 
 // page-change
 .slide-fade-enter-active {
-    transition: all 0.20s $easing-in;
+    transition: all 0.2s $easing-in;
 }
+
 .slide-fade-leave-active {
-    transition: all 0.20s $easing-in;
+    transition: all 0.2s $easing-in;
 }
+
 .slide-fade-enter-from,
 .slide-fade-leave-to {
     transform: translateY(50px);
