--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -1,5 +1,5 @@
-$primary: #5CDD8B;
-$danger: #DC3545;
+$primary: #5cdd8b;
+$danger: #dc3545;
 $warning: #f8a306;
 $link-color: #111;
 $border-radius: 50rem;
@@ -9,10 +9,10 @@ $highlight-white: #e7faec;
 
 $dark-font-color: #b1b8c0;
 $dark-font-color2: #020b05;
-$dark-bg: #0D1117;
-$dark-bg2: #070A10;
+$dark-bg: #0d1117;
+$dark-bg2: #070a10;
 $dark-border-color: #1d2634;
 
-$easing-in: cubic-bezier(0.54,0.78,0.55,0.97);
+$easing-in: cubic-bezier(0.54, 0.78, 0.55, 0.97);
 $easing-out: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 $easing-in-out: cubic-bezier(0.79, 0.14, 0.15, 0.86);
