Fix: Fix Notification "Test" btn styling

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -71,6 +71,14 @@ h2 {
     }
 }
 
+.btn-warning {
+    color: white;
+
+    &:hover, &:active, &:focus, &.active {
+        color: white;
+    }
+}
+
 .btn-info {
     color: white;
 
@@ -184,6 +192,14 @@ h2 {
 
     .btn-secondary {
         color: white;
+    }
+
+    .btn-warning {
+        color: $dark-font-color2;
+
+        &:hover, &:active, &:focus, &.active {
+            color: $dark-font-color2;
+        }
     }
 
     .btn-close {
