better switch button color in dark mode

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -152,7 +152,7 @@ h2 {
     }
 
     .form-switch .form-check-input {
-        background-color: #131a21;
+        background-color: #232f3b;
     }
 
     a,
