--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -14,6 +14,10 @@ h2 {
     font-size: 26px;
 }
 
+textarea.form-control {
+    border-radius: 19px;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
