fix table hover color not working after updated bootstrap to 5.1.3

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -189,7 +189,7 @@ textarea.form-control {
         opacity: 1;
     }
 
-    .table-hover > tbody > tr:hover {
+    .table-hover > tbody > tr:hover > * {
         --bs-table-accent-bg: #070a10;
         color: $dark-font-color;
     }
