--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -14,6 +14,12 @@ h2 {
     font-size: 26px;
 }
 
+@media (max-width: 550px) {
+    .logo-wrapper { 
+        float: left;
+    }
+}
+
 textarea.form-control {
     border-radius: 19px;
 }
