A complete maintenance planning system has been created

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -273,6 +273,7 @@ textarea.form-control {
         &.bg-info,
         &.bg-warning,
         &.bg-danger,
+        &.bg-maintenance,
         &.bg-light {
             color: $dark-font-color2;
         }
