Fixed dark mode checkbox
The border colour of the checkbox has been changed to make it more
visible to the user when the dark mode is in use.

Signed-off-by: Computroniks <mnickson@sidingsmedia.com>

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -156,8 +156,13 @@ textarea.form-control {
 
     .form-check-input {
         background-color: $dark-bg2;
+        border-color: $dark-border-color;
     }
 
+    .form-check-input:checked {
+        border-color: $primary; // Re-apply bootstrap border
+    }
+    
     .form-switch .form-check-input {
         background-color: #232f3b;
     }
