[Status Page] Listing: Better loading effect

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -448,6 +448,10 @@ textarea.form-control {
     border-radius: 10px !important;
 }
 
+.spinner {
+    color: $primary;
+}
+
 // Localization
 
 @import "localization.scss";
