Revert #1208, due to the break animation

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -367,7 +367,7 @@ textarea.form-control {
     .item {
         display: block;
         text-decoration: none;
-        padding: 15px;
+        padding: 13px 15px 10px 15px;
         border-radius: 10px;
         transition: all ease-in-out 0.15s;
 
