--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -252,6 +252,10 @@ optgroup {
         color: $dark-font-color2;
     }
 
+    .bg-maintenance {
+        background-color: $maintenance;
+    }
+
     .btn-secondary {
         color: white;
     }
