Add info.serverTimezoneOffset and improve some styles

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -101,6 +101,11 @@ optgroup {
     }
 }
 
+// Override Bootstrap
+.btn-group > .btn:hover {
+    z-index: initial;
+}
+
 .btn {
     padding-left: 20px;
     padding-right: 20px;
