--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -35,9 +35,9 @@ textarea.form-control {
     color: $maintenance !important;
 }
 
-// pause number color
-.text-pause {
-    color: $pause !important;
+// unknown number color
+.text-unknown {
+    color: $unknown !important;
 }
 
 .incident a,
