--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -2,7 +2,7 @@ $primary: #5cdd8b;
 $danger: #dc3545;
 $warning: #f8a306;
 $maintenance: #1747f5;
-$pause:#e5a328;
+$unknown:#e5a328;
 $link-color: #111;
 $border-radius: 50rem;
 
