--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -40,6 +40,11 @@ textarea.form-control {
     color: $unknown !important;
 }
 
+// pause number color
+.text-pause {
+    color: $pause !important;
+}
+
 .incident a,
 .bg-maintenance a {
     color: inherit;
