--- a/src/assets/vars.scss
+++ b/src/assets/vars.scss
@@ -3,6 +3,7 @@ $danger: #dc3545;
 $warning: #f8a306;
 $maintenance: #1747f5;
 $unknown:#e5a328;
+$pause:#060047;
 $link-color: #111;
 $border-radius: 50rem;
 
